--- a/Changelog
+++ b/Changelog
@@ -1,13 +1,15 @@
 1.1.0
 New features
 - Lyrics displaying
-- Add Last.Fm tracks submission
-- Resize cover art if image is larger than 1024*768
+- Added Last.Fm tracks submission
+- Resize cover art if image is larger than desired
+- Add max height and width sizes for cover art in preferences
 
 Bug fixes
-- Window with cover art not resize
+- Window with cover art do not resize
 - Playlists are not refreshed if one was deleted
 - Automatic deletion of songs in dynamic playlist
+- Opening of multiple about dialogs
 
 1.0.9
 New features
