misc files update

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,6 @@ Voker57
     voker57@gmail.com
     Developer, qmpdclient-ne maintainer
 
+Roman (Ky6uk) Nuritdinov
+    ky6uk.kun@gmail.com
+    Developer
