--- a/README
+++ b/README
@@ -7,3 +7,6 @@ http://havtknut.tihlde.org/qmpdclient/
 QMPDClient-ne, additions by Voker57
 
 http://github.com/Voker57/qmpdclient-ne/tree/master
+
+QMPDClient-ng by Ky6uk (c) 2009
+http://github.com/Ky6uk/qmpdclient-ng
