--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,6 @@ Håvard Tautra Knutsen
 Voker57
 	voker57@gmail.com
     Developer, qmpdclient-ne maintainer
+Roman (Ky6uk) Nuritdinov
+    ky6uk.kun@gmail.com
+    Developer
